compiler/testData/diagnostics/tests/NamespaceAsExpression.jet
package root

package a {

}

val x = <!EXPRESSION_EXPECTED_NAMESPACE_FOUND!>a<!>
val y2 = <!NAMESPACE_IS_NOT_AN_EXPRESSION!>package<!>
